# python-demo

./: pandas_demo.py  setup.cfg  temperature_dataset.py
tests/: test_pandas_demo.py
tests/integration_tests/: test_temperature_dataset.py
tests/unit_tests/: test_temperature_dataset.py
