[metadata]
name = pyalgo
version = 0.0.1
author = Vera Ilina
author_email = vilina.develop@gmail.com
description = Examples of python code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vvegorova/python-demo
project_urls =
    Bug Tracker = https://github.com/verailina/python-demo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pyalgo
packages = find:
python_requires = >=3.6

[options.packages.find]
where = python-demo